pom.xml: add javac17-release profile
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>